# bs4_web_scraper

./: .gitignore  LICENSE.md  README.md  __init__.py  example.py  pyproject.toml  requirements.txt
bs4_web_scraper/: __init__.py  base.py  exceptions.py  file_handler.py  logger.py  logging.py  request_limiter.py  scraper.py  translate.py  utils.py
scripts/: help.py  scraper.py  translate.py  translators.py  utils.py
tests/: test_base.py  test_file_handler.py  test_scraper.py  test_translate.py
tests/fixtures/: test.txt
